--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -4,7 +4,7 @@
 # run. So please, fill in any custom menu entry here.
 header:
 - title: About
-  url: /about
+  url: /about.html
 - title: Products
   url: /#services
 - title: Technology
