--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -4,7 +4,7 @@
 # run. So please, fill in any custom menu entry here.
 header:
 - title: About
-  url: /about.html
+  url: /about.md
 - title: Products
   url: /#services
 - title: Technology
