--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,5 +1,5 @@
-copyright: '&copy; Start Bootstrap'
+copyright: '&copy; 2020 Secure Cyber Risk Aggregation and Management'
 links:
-  - text: Creative
+  - text: MIT Computer Science and Artificial Intelligence Laboratory
     url: 'https://startbootstrap.com/themes/creative/'
     new_window: true
