--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,5 +1,5 @@
 copyright: '&copy; 2020 Secure Cyber Risk Aggregation and Management'
 links:
   - text: MIT Computer Science and Artificial Intelligence Laboratory
-    url: 'https://startbootstrap.com/themes/creative/'
+    url: 'https://internetpolicy.mit.edu/'
     new_window: true
