--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,4 +1,4 @@
-copyright: '&copy; 2020 Secure Cyber Risk Aggregation and Management'
+copyright: '&copy; 2020 Internet Policy Research Initiative'
 links:
   - text: MIT Computer Science and Artificial Intelligence Laboratory
     url: 'https://internetpolicy.mit.edu/cyber-risk/'
