--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,4 +1,4 @@
-copyright: '&copy; 2020 Internet Policy Research Initiative'
+copyright: <a href="https://accessibility.mit.edu/" target="_blank">'&copy; 2020 Internet Policy Research Initiative'</a>
 links:
   - text: MIT Computer Science and Artificial Intelligence Laboratory
     url: 'https://internetpolicy.mit.edu/cyber-risk/'
