--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,5 +1,5 @@
-copyright: <a href="https://accessibility.mit.edu/" target="_blank">&copy; 2020 Internet Policy Research Initiative'</a>
+copyright: &copy; 2020 Internet Policy Research Initiative'
 links:
-  - text: MIT Computer Science and Artificial Intelligence Laboratory
-    url: 'https://internetpolicy.mit.edu/cyber-risk/'
+  - text: Accesibility
+    url: 'https://accessibility.mit.edu/'
     new_window: true
