--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,3 +1,5 @@
-copyright: &copy; 2020 Internet Policy Research Initiative
-text:Lorem
-
+copyright: &copy; 2020 Internet Policy Research Initiative'
+links:
+  - text: MIT Computer Science and Artificial Intelligence Laboratory
+    url: 'https://internetpolicy.mit.edu/cyber-risk/'
+    new_window: true
