--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -3,3 +3,8 @@ links:
   - text: MIT Computer Science and Artificial Intelligence Laboratory
     url: 'https://internetpolicy.mit.edu/cyber-risk/'
     new_window: true
+copyright: Accesibility
+links:
+  - text: MIT Computer Science and Artificial Intelligence Laboratory
+    url: 'https://internetpolicy.mit.edu/cyber-risk/'
+    new_window: true
