--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,4 +1,4 @@
-copyright: &copy; 2020 Internet Policy Research Initiative'
+copyright: '&copy; 2020 Internet Policy Research Initiative'
 links:
   - text: Accesibility
     url: 'https://accessibility.mit.edu/'
