--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,5 +1,5 @@
 copyright: '<a href="https://internetpolicy.mit.edu/" target="_blank">&copy; 2020 Internet Policy Research Initiative</a>'
 links:
-  - text: Accesibility
+  - text: Accessibility
     url: 'https://accessibility.mit.edu/'
     new_window: true
