--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -3,8 +3,8 @@ links:
   - text: Accessibility
     url: 'https://accessibility.mit.edu/'
     new_window: true
-<br>   
-  - text: 'MIT Computer Science and Artificial Intelligence Lab (CSAIL)'
+
+  - text: '<br>MIT Computer Science and Artificial Intelligence Lab (CSAIL)'
     url: 'https://www.csail.mit.edu/'
     new_window: true
 
