--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,4 +1,5 @@
-copyright: '<a href="https://internetpolicy.mit.edu/" target="_blank">&copy; 2020 Internet Policy Research Initiative</a>'
+copyright: '<a href="mailto:scram@mit.edu" target="_blank">scram@mit.edu</a><br>
+<a href="https://internetpolicy.mit.edu/" target="_blank">&copy; 2020 Internet Policy Research Initiative</a>'
 links:
   - text: Accessibility
     url: 'https://accessibility.mit.edu/'
