--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,4 +1,4 @@
-copyright: '<a href="https://www.csail.mit.edu/" style="color:#fff;" target="_blank"><img src="assets/img/csail.png"></a><br><a href="https://internetpolicy.mit.edu/" style="color:#fff;" target="_blank">&copy; 2020 Internet Policy Research Initiative</a>'
+copyright: '<a href="https://www.csail.mit.edu/" style="color:#fff;" target="_blank"><img src="assets/img/csail-colored.png"></a><br><a href="https://internetpolicy.mit.edu/" style="color:#fff;" target="_blank">&copy; 2020 Internet Policy Research Initiative</a>'
 links:
   - text: Accessibility
     url: 'https://accessibility.mit.edu/'
