Update to build locally outside of GitHub
These instructions work on Ubuntu 18.04LTS and should work on newer
systems. You will need a C and C++ Compiler as well as a bunch of
development libraries.

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: MIT Secure Cyber Risk Aggregation and Measurement
 description: > # this means to ignore newlines until "baseurl:"
-baseurl: "/MIT/" # the subpath of your site, e.g. /blog/
+baseurl: "" # the subpath of your site, e.g. /blog/
 url: "" # the base hostname & protocol for your site
 author: Cybersecurity benchmarking and ROI analytics without own-data disclosure
 lang: en_US
@@ -21,3 +21,4 @@ exclude:
   - Gemfile.lock
   - build-in-docker.sh
   - README.md
+  - vendor
